# ex2-plugins

./: CMakeLists.txt  README.md  test_harness.cpp
.github/workflows/: build.yml
plugins/.github/workflows/: build.yml
plugins/Chords/: CMakeLists.txt
plugins/Chords/Source/: ChordEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Detect/: CMakeLists.txt
plugins/Detect/Source/: Analyzer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
